--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,29 +18,27 @@
     overflow: hidden;
     pointer-events: none;
     z-index: 25;
+    &:before {
+        content: '';
+        cursor: pointer;
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: #0c1066;
+        opacity: 0;
+        transition: opacity 300ms linear;
+        will-change: opacity;
+    }
 }
 
 .side-menu__container-active {
     pointer-events: auto;
-}
-
-.side-menu__container::before {
-    content: '';
-    cursor: pointer;
-    position: absolute;
-    display: block;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: #0c1066;
-    opacity: 0;
-    transition: opacity 300ms linear;
-    will-change: opacity;
-}
-
-.side-menu__container-active::before {
-    opacity: 0.3;
+    &::before {
+        opacity: 0.3;
+    }
 }
 
 .slide-menu {
