--- a/src/app/item-card/item-card.component.html
+++ b/src/app/item-card/item-card.component.html
@@ -9,9 +9,10 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias dolorum fugit temporibus debitis ab quam enim iure nesciunt labore molestias! Voluptatibus incidunt debitis ratione, necessitatibus repellendus libero totam suscipit sapiente!
         </p>
+        <p [innerHTML]="deliveryFeesHtml"></p>
     </mat-card-content>
     <mat-card-actions>
         <button mat-button>Buy</button>
-        <button mat-button (click)="getDeliveryFee(40)">Info</button>
+        <button mat-button (click)="getDeliveryFee(40)">Calculate delivery fees</button>
     </mat-card-actions>
 </mat-card>
