--- a/src/app/item-card/item-card.component.html
+++ b/src/app/item-card/item-card.component.html
@@ -12,7 +12,7 @@
         <p [innerHTML]="deliveryFeesHtml"></p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-button>Buy</button>
+        <button mat-button (click)="openRegisterDialog()">Buy</button>
         <button mat-button (click)="getDeliveryFee(product.weight)">Calculate delivery fees</button>
     </mat-card-actions>
 </mat-card>
