--- a/src/app/client-register-dialog/client-register-dialog.component.html
+++ b/src/app/client-register-dialog/client-register-dialog.component.html
@@ -1,22 +1,22 @@
-<h1 mat-dialog-title>Client registration</h1>
-<div mat-dialog-content>
+<h1 mat-dialog-title class="text-center">Client registration</h1>
+<div mat-dialog-content class="text-center">
     <p>
         Please fill in these few details in order to continue with the payment.
     </p>
     <mat-form-field>
         <mat-label>First name</mat-label>
-        <input matInput [(ngModel)]="data.firstName">
+        <input required matInput [(ngModel)]="data.firstName">
     </mat-form-field>
     <mat-form-field>
         <mat-label>Last name</mat-label>
-        <input matInput [(ngModel)]="data.lastName">
+        <input required matInput [(ngModel)]="data.lastName">
     </mat-form-field>
     <mat-form-field>
         <mat-label>Email</mat-label>
-        <input matInput [(ngModel)]="data.email">
+        <input type="email" required email matInput [(ngModel)]="data.email">
     </mat-form-field>
 </div>
-<div mat-dialog-actions>
+<div mat-dialog-actions class="justify-content-center">
     <button mat-button [mat-dialog-close]="data">Submit</button>
     <button mat-button (click)="onCancelClick()">Cancel</button>
 </div>
