--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
             <div class="content mt-5 mx-auto">
                 <div class="row justify-content-center w-100">
                     <div class="col col-lg-3 col-sm-4" *ngFor="let product of products">
-                        <app-item-card class="product" [product]="product"></app-item-card>
+                        <app-item-card class="product" [productQl]="product"></app-item-card>
                     </div>
                 </div>
             </div>
