--- a/src/app/item-card/item-card.component.html
+++ b/src/app/item-card/item-card.component.html
@@ -13,6 +13,6 @@
     </mat-card-content>
     <mat-card-actions>
         <button mat-button (click)="openRegisterDialog()">Buy</button>
-        <button mat-button (click)="getDeliveryFee(product.weight)">Calculate delivery fees</button>
+        <button mat-button (click)="showFees(product.weight)">Calculate delivery fees</button>
     </mat-card-actions>
 </mat-card>
