Fix null warning in ItemCardComponent + Add price to product cards

--- a/src/app/item-card/item-card.component.html
+++ b/src/app/item-card/item-card.component.html
@@ -9,6 +9,9 @@
         <p>
             {{product.description}}
         </p>
+        <p>
+            <strong>Price: {{product.price}}€</strong>
+        </p>
         <p [innerHTML]="deliveryFeesHtml"></p>
     </mat-card-content>
     <mat-card-actions>
