--- a/src/app/item-card/item-card.component.html
+++ b/src/app/item-card/item-card.component.html
@@ -4,7 +4,7 @@
         <mat-card-title>{{product.name}}</mat-card-title>
         <mat-card-subtitle>Seller name</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="assets/sam.png" alt="Le boss">
+    <img mat-card-image src={{product.assetUrl}} alt="Le boss">
     <mat-card-content>
         <p>
             {{product.description}}
