--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,8 +44,8 @@
         <div class="main-container__bg">
             <div class="content mt-5 mx-auto">
                 <div class="row justify-content-center w-100">
-                    <div class="col col-lg-3 col-sm-4" *ngFor="let product of products">
-                        <app-item-card class="product" [productQl]="product"></app-item-card>
+                    <div class="col col-xl-2 col-lg-3 col-sm-4 product" *ngFor="let product of products">
+                        <app-item-card [productQl]="product"></app-item-card>
                     </div>
                 </div>
             </div>
