--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -264,9 +264,9 @@
 }
 
 .product {
-    margin: 5rem;
+    margin: 1rem;
+    margin-bottom: 2rem;
     width: 100%;
-    height: 100%;
 }
 
 @media only screen and (max-width: 300px) {
