Sell product dialog form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,9 @@
             </div>
         </section>
         <section class="menu-body">
-
+            <div class="text-center">
+                <button type="button" class="btn btn-primary" (click)="openSellingDialog()">Sell new item</button>
+            </div>
         </section>
         <section class="menu-footer">
 
@@ -43,7 +45,7 @@
     <main class="main__container">
         <div class="main-container__bg">
             <div class="content mt-5 mx-auto">
-                <div class="row justify-content-center w-100">
+                <div class="row justify-content-center w-100" *ngIf="showProducts">
                     <div class="col col-xl-2 col-lg-3 col-sm-4 product" *ngFor="let product of products">
                         <app-item-card [productQl]="product"></app-item-card>
                     </div>
