Seller registration + dialog box

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,9 @@
             </div>
         </section>
         <section class="menu-body">
-            <div class="text-center">
+            <div class="d-flex flex-column mx-auto text-center">
                 <button type="button" class="btn btn-primary" (click)="openSellingDialog()">Sell new item</button>
+                <button type="button" class="btn btn-primary" (click)="openSellerRegisterDialog()">Register new seller</button>
             </div>
         </section>
         <section class="menu-footer">
