--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -112,6 +112,9 @@
     align-content: center;
     margin-top: 2rem;
     width: 100%;
+    .btn {
+        margin-bottom: 2rem;
+    }
 }
 
 .main__header {
