--- a/src/app/hamburger-menu/hamburger-menu.component.html
+++ b/src/app/hamburger-menu/hamburger-menu.component.html
@@ -1,4 +1,4 @@
-<div id="nav-icon" [ngClass]="{'open': toggled}" (click)="toggle()">
+<div id="nav-icon" [ngClass]="{'open': toggled}">
     <span></span>
     <span></span>
     <span></span>
