--- a/src/app/item-card/item-card.component.html
+++ b/src/app/item-card/item-card.component.html
@@ -2,7 +2,7 @@
     <mat-card-header>
         <div mat-card-avatar class="header-image"></div>
         <mat-card-title>{{product.name}}</mat-card-title>
-        <mat-card-subtitle>Seller name</mat-card-subtitle>
+        <mat-card-subtitle>{{product.seller.firstName}} {{product.seller.lastName}}</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image class="img-fluid mx-auto product-image" src={{product.assetUrl}} alt="product image">
     <div>
